infra/projects/infatium/base/app-integrations-python/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-integrations-python
  labels:
    app: app-integrations-python
    service-template: app-python
    service-type: app
    proxy-sidecar: enabled
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: app-integrations-python
  template:
    metadata:
      labels:
        app: app-integrations-python
        expose: ingress
    spec:
      nodeSelector:
        node-role: infra
      tolerations:
        - key: node-role
          operator: Equal
          value: infra
          effect: NoSchedule
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app-integrations-python
          image: registry.infra.makekod.ru/makefeed:microservices
          imagePullPolicy: Always
          command: ["makefeed-integrations"]
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      terminationGracePeriodSeconds: 30
